# personal-diary

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_initial.py
diary/templates/diary/: base.html  delete_note.html  diary.html  note.html  note_form.html  notes.html
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  registration.html
